--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  color: black;
+  background-color: #ffffff;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -14,19 +20,41 @@ img {
   display: block;
   max-width: 100%;
 }
+.heder {
+  background-color: rgb(88, 151, 251, 0.95);
+  /* height: 50px; */
+  display: block;
+  position: fixed;
+  width: 100%;
 
+  left: 50%;
+
+  transform: translate(-50%);
+  border-bottom: 1px solid #4d5ae5;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 .search-form {
   display: flex;
   justify-content: center;
   gap: 15px;
-  margin-top: 15;
-  margin-bottom: 15;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-
+input {
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  padding: 8px 16px;
+}
+input:focus {
+  outline: #4d5ae5;
+  box-shadow: inset 0 0 2px 2px rgba(77, 90, 229, 1);
+}
 .gallery {
   width: 1782px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 80px;
 
   margin: auto;
   display: flex;
@@ -42,8 +70,7 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.container {
-}
+
 .info {
   display: flex;
   justify-content: space-between;
@@ -54,18 +81,17 @@ img {
   border-left: 1px solid #e7e9fc;
 }
 
-.info-item {
-}
-
 b {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 24px;
+  color: black;
 }
 
 span {
   font-weight: 500;
+  color: black;
 }
 
 button {
@@ -100,4 +126,7 @@ button:focus {
 
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+a {
+  text-decoration: none;
 }
